docs: add documentation for List Openings
